--- a/style.css
+++ b/style.css
@@ -128,3 +128,15 @@ margin:5em 0
     font-size:32px;
 
 }
+
+.rodape{
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.roda_lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1 em;
+}
