--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ margin:5em 0
     margin: 5em 3em;
 }
 
-.roda_lista{
+.rodape__lista{
     display: flex;
     justify-content: center;
     list-style-type: none;
