--- a/style.css
+++ b/style.css
@@ -128,20 +128,20 @@ margin:5em 0
     font-size:32px;
 
 }
-
-.rodape{
+.rodape {
     text-align: center;
     margin: 5em 3em;
 }
 
-.rodape__lista{
+.rodape__lista {
     display: flex;
     justify-content: center;
     list-style-type: none;
     margin-top: 1em;
 }
 
-.lista__link{
-    text-decoration: none;
-    
-}
+.lista__link a {
+     text-decoration: none;
+    color: var(--branco-principal);
+     margin-left: 1em;
+}   
